@@ -9,6 +9,15 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import com.hrr.backend.domain.challenge.entity.Challenge;
+import com.hrr.backend.domain.comment.dto.CommentCreateRequestDto;
+import com.hrr.backend.domain.round.entity.Round;
+import com.hrr.backend.domain.round.entity.RoundRecord;
+import com.hrr.backend.domain.user.entity.UserChallenge;
+import com.hrr.backend.domain.user.entity.enums.ChallengeJoinStatus;
+import com.hrr.backend.domain.user.repository.UserChallengeRepository;
+import com.hrr.backend.global.exception.GlobalException;
+import com.hrr.backend.global.response.ErrorCode;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -37,149 +46,157 @@ import com.hrr.backend.global.s3.S3UrlUtil;
 @ExtendWith(MockitoExtension.class)
 class CommentServiceTest {
 
-    private CommentServiceImpl commentService;
-    private CommentConverter commentConverter;
+        private CommentServiceImpl commentService;
+        private CommentConverter commentConverter;
 
-    @Mock private VerificationRepository verificationRepository;
-    @Mock private CommentRepository commentRepository;
-    @Mock private UserRepository userRepository;
-    @Mock private UserBlockRepository userBlockRepository;
-    @Mock private S3UrlUtil s3UrlUtil;
+        @Mock private VerificationRepository verificationRepository;
+        @Mock private CommentRepository commentRepository;
+        @Mock private UserRepository userRepository;
+        @Mock private UserBlockRepository userBlockRepository;
+        @Mock private UserChallengeRepository userChallengeRepository;
+        @Mock private S3UrlUtil s3UrlUtil;
 
-    @BeforeEach
-    void setUp() {
-        // Converter는 로직이 복잡하므로 Mock이 아닌 실제 객체를 사용하여 결과 검증
-        commentConverter = new CommentConverter(s3UrlUtil);
+        @BeforeEach
+        void setUp() {
+            // Converter는 로직이 복잡하므로 Mock이 아닌 실제 객체를 사용하여 결과 검증
+            commentConverter = new CommentConverter(s3UrlUtil);
 
-        // Service 생성 (생성자 주입)
-        commentService = new CommentServiceImpl(
-                verificationRepository,
-                commentRepository,
-                userRepository,
-                commentConverter,
-                userBlockRepository
-        );
-    }
+            // Service 생성 (생성자 주입)
+            commentService = new CommentServiceImpl(
+                    verificationRepository,
+                    commentRepository,
+                    userRepository,
+                    commentConverter,
+                    userBlockRepository,
+                    userChallengeRepository
+            );
+        }
 
-    // --- 헬퍼 메서드 ---
+        // --- 헬퍼 메서드 ---
 
-    private User createUser(Long id, String nickname, UserStatus status) {
-        return User.builder()
-                .id(id)
-                .nickname(nickname)
-                .userStatus(status)
-                .profileImage("profile.jpg")
-                .build();
-    }
+        private User createUser(Long id, String nickname, UserStatus status) {
+            return User.builder()
+                    .id(id)
+                    .nickname(nickname)
+                    .userStatus(status)
+                    .profileImage("profile.jpg")
+                    .build();
+        }
 
-    private Verification createVerification(Long id) {
-        return Verification.builder()
-                .id(id)
-                .build();
-    }
+        private Verification createVerification(Long id) {
+            return Verification.builder()
+                    .id(id)
+                    .build();
+        }
 
-    /**
-     * Comment 객체 생성 및 Reflection을 이용한 BaseEntity 필드 주입
-     */
-    private Comment createComment(Long id, Verification verification, User user, String content, boolean isDeleted, boolean isAnonymous, Integer anonymousNumber) {
-        Comment comment = Comment.builder()
-                .id(id)
-                .verification(verification)
-                .user(user)
-                .content(content)
-                .isDeleted(isDeleted)
-                .isAnonymous(isAnonymous)
-                .anonymousNumber(anonymousNumber)
-                .likesCount(0)
-                .depth(0)
-                .build();
+        /**
+         * Comment 객체 생성 및 Reflection을 이용한 BaseEntity 필드 주입
+         */
+        private Comment createComment(Long id, Verification verification, User user, String content, boolean isDeleted, boolean isAnonymous, Integer anonymousNumber) {
+            Comment comment = Comment.builder()
+                    .id(id)
+                    .verification(verification)
+                    .user(user)
+                    .content(content)
+                    .isDeleted(isDeleted)
+                    .isAnonymous(isAnonymous)
+                    .anonymousNumber(anonymousNumber)
+                    .likesCount(0)
+                    .depth(0)
+                    .build();
 
-        // BaseEntity 필드 주입 (생성 시간 정렬 테스트 시 필요)
-        ReflectionTestUtils.setField(comment, "createdAt", LocalDateTime.now());
+            // BaseEntity 필드 주입 (생성 시간 정렬 테스트 시 필요)
+            ReflectionTestUtils.setField(comment, "createdAt", LocalDateTime.now());
 
-        return comment;
-    }
+            return comment;
+        }
 
-    // --- 테스트 케이스 ---
+        // --- 테스트 케이스 (조회) ---
 
-    @Test
-    @DisplayName("정상 조회: 차단/삭제/탈퇴 없는 클린한 댓글")
-    void getComments_Normal() {
-        // given
-        Long verificationId = 100L;
-        Long myId = 1L;
-        Long writerId = 2L;
+        @Test
+        @DisplayName("정상 조회: 차단/삭제/탈퇴 없는 클린한 댓글")
+        void getComments_Normal() {
+            // given
+            Long verificationId = 100L;
+            Long myId = 1L;
+            Long writerId = 2L;
 
-        User me = createUser(myId, "나", UserStatus.ACTIVE);
-        User writer = createUser(writerId, "작성자", UserStatus.ACTIVE);
-        Verification verification = createVerification(verificationId);
+            User me = createUser(myId, "나", UserStatus.ACTIVE);
+            User writer = createUser(writerId, "작성자", UserStatus.ACTIVE);
+            Verification verification = createVerification(verificationId);
 
-        Comment comment = createComment(10L, verification, writer, "정상 댓글입니다.", false, false, null);
+            Comment comment = createComment(10L, verification, writer, "정상 댓글입니다.", false, false, null);
 
-        // Mocking
-        given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
-        given(userRepository.findById(myId)).willReturn(Optional.of(me));
+            // Mocking
+            given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
+            given(userRepository.findById(myId)).willReturn(Optional.of(me));
 
-        // 차단 목록 없음
-        given(userBlockRepository.findBlockedIdsByBlockerId(myId)).willReturn(Collections.emptyList());
+            // 차단 목록 없음
+            given(userBlockRepository.findBlockedIdsByBlockerId(myId)).willReturn(Collections.emptyList());
 
-        // 댓글 조회 (삭제된 것도 포함하는 메서드 호출됨)
-        given(commentRepository.findByVerificationAndDepthOrderByCreatedAtAsc(any(), anyInt(), any(Pageable.class)))
-                .willReturn(new PageImpl<>(List.of(comment)));
+            // 댓글 조회 (삭제된 것도 포함하는 메서드 호출됨)
+            given(commentRepository.findByVerificationAndDepthOrderByCreatedAtAsc(any(), anyInt(), any(Pageable.class)))
+                    .willReturn(new PageImpl<>(List.of(comment)));
 
-        given(commentRepository.findByParentInOrderByCreatedAtAsc(anyList()))
-                .willReturn(Collections.emptyList());
+            given(commentRepository.findByParentInOrderByCreatedAtAsc(anyList()))
+                    .willReturn(Collections.emptyList());
 
-        given(s3UrlUtil.toFullUrl(anyString())).willReturn("http://full-url.com/profile.jpg");
+            given(s3UrlUtil.toFullUrl(anyString())).willReturn("http://full-url.com/profile.jpg");
 
-        // when
-        CommentListResponseDto result = commentService.getComments(verificationId, myId, PageRequest.of(0, 10));
+            // [수정] 전체 카운트 Mock (메서드명 변경 반영)
+            given(commentRepository.countByVerificationAndIsDeletedFalse(verification)).willReturn(1L);
 
-        // then
-        CommentResponseDto dto = result.getComments().get(0);
-        assertThat(dto.getContent()).isEqualTo("정상 댓글입니다.");
-        assertThat(dto.getUserName()).isEqualTo("작성자");
-        assertThat(dto.getMaskingType()).isEqualTo(CommentMaskingType.NONE);
-        assertThat(dto.getUserProfileUrl()).isEqualTo("http://full-url.com/profile.jpg");
-    }
+            // when
+            CommentListResponseDto result = commentService.getComments(verificationId, myId, PageRequest.of(0, 10));
 
-    @Test
-    @DisplayName("마스킹: 내가 차단한 사용자의 댓글 (Type: BLOCKED)")
-    void getComments_BlockedUser() {
-        // given
-        Long verificationId = 100L;
-        Long myId = 1L;
-        Long blockedUserId = 99L;
+            // then
+            CommentResponseDto dto = result.getComments().get(0);
+            assertThat(dto.getContent()).isEqualTo("정상 댓글입니다.");
+            assertThat(dto.getUserName()).isEqualTo("작성자");
+            assertThat(dto.getMaskingType()).isEqualTo(CommentMaskingType.NONE);
+            assertThat(dto.getUserProfileUrl()).isEqualTo("http://full-url.com/profile.jpg");
+            assertThat(result.getTotalCount()).isEqualTo(1L); // 전체 개수 검증
+        }
 
-        User me = createUser(myId, "나", UserStatus.ACTIVE);
-        User blockedUser = createUser(blockedUserId, "차단남", UserStatus.ACTIVE);
-        Verification verification = createVerification(verificationId);
+        @Test
+        @DisplayName("마스킹: 내가 차단한 사용자의 댓글 (Type: BLOCKED)")
+        void getComments_BlockedUser() {
+            // given
+            Long verificationId = 100L;
+            Long myId = 1L;
+            Long blockedUserId = 99L;
 
-        Comment comment = createComment(11L, verification, blockedUser, "보기 싫은 글", false, false, null);
+            User me = createUser(myId, "나", UserStatus.ACTIVE);
+            User blockedUser = createUser(blockedUserId, "차단남", UserStatus.ACTIVE);
+            Verification verification = createVerification(verificationId);
 
-        given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
-        given(userRepository.findById(myId)).willReturn(Optional.of(me));
+            Comment comment = createComment(11L, verification, blockedUser, "보기 싫은 글", false, false, null);
 
-        // [중요] 내가 차단한 목록에 포함됨 -> 마스킹 대상
-        given(userBlockRepository.findBlockedIdsByBlockerId(myId)).willReturn(List.of(blockedUserId));
+            given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
+            given(userRepository.findById(myId)).willReturn(Optional.of(me));
 
-        given(commentRepository.findByVerificationAndDepthOrderByCreatedAtAsc(any(), anyInt(), any(Pageable.class)))
-                .willReturn(new PageImpl<>(List.of(comment)));
+            // [중요] 내가 차단한 목록에 포함됨 -> 마스킹 대상
+            given(userBlockRepository.findBlockedIdsByBlockerId(myId)).willReturn(List.of(blockedUserId));
 
-        given(commentRepository.findByParentInOrderByCreatedAtAsc(anyList()))
-                .willReturn(Collections.emptyList());
+            given(commentRepository.findByVerificationAndDepthOrderByCreatedAtAsc(any(), anyInt(), any(Pageable.class)))
+                    .willReturn(new PageImpl<>(List.of(comment)));
 
-        // when
-        CommentListResponseDto result = commentService.getComments(verificationId, myId, PageRequest.of(0, 10));
+            given(commentRepository.findByParentInOrderByCreatedAtAsc(anyList()))
+                    .willReturn(Collections.emptyList());
 
-        // then
-        CommentResponseDto dto = result.getComments().get(0);
-        assertThat(dto.getContent()).isEqualTo("차단된 사용자의 댓글입니다.");
-        assertThat(dto.getUserName()).isNull(); // Converter 로직 상 null
-        assertThat(dto.getMaskingType()).isEqualTo(CommentMaskingType.BLOCKED);
-        assertThat(dto.getUserId()).isNull(); // ID 노출 X
-    }
+            // Count Mock (필요시 추가, 여기선 조회 결과 검증 위주이므로 필수는 아니나 로직 흐름상 호출됨)
+            given(commentRepository.countByVerificationAndIsDeletedFalse(verification)).willReturn(1L);
 
+            // when
+            CommentListResponseDto result = commentService.getComments(verificationId, myId, PageRequest.of(0, 10));
+
+            // then
+            CommentResponseDto dto = result.getComments().get(0);
+            assertThat(dto.getContent()).isEqualTo("차단된 사용자의 댓글입니다.");
+            assertThat(dto.getUserName()).isNull(); // Converter 로직 상 null
+            assertThat(dto.getMaskingType()).isEqualTo(CommentMaskingType.BLOCKED);
+            assertThat(dto.getUserId()).isNull(); // ID 노출 X
+        }
     @Test
     @DisplayName("마스킹 X: 나를 차단한 사용자의 댓글 (Type: NONE) - 단방향 차단 검증")
     void getComments_UserWhoBlockedMe() {
@@ -323,5 +340,290 @@ class CommentServiceTest {
         assertThat(dto.getUserName()).isEqualTo("익명3");
         assertThat(dto.getUserId()).isNull();
         assertThat(dto.isAnonymous()).isTrue();
+    }
+
+    // --- [추가된 테스트] 댓글 작성 검증 (Review 반영) ---
+
+    @Test
+    @DisplayName("댓글 작성 실패: 챌린지 미참여 유저 (USER_CHALLENGE_NOT_FOUND)")
+    void createComment_UserChallengeNotFound() {
+        // given
+        Long verificationId = 100L;
+        Long userId = 1L;
+        Long challengeId = 10L;
+
+        // Mock 객체 체이닝을 위한 설정
+        Verification verification = mock(Verification.class);
+        RoundRecord roundRecord = mock(RoundRecord.class);
+        Round round = mock(Round.class);
+        Challenge challenge = mock(Challenge.class);
+        User user = createUser(userId, "참여자", UserStatus.ACTIVE);
+
+        // 체이닝 연결
+        given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
+        given(userRepository.findById(userId)).willReturn(Optional.of(user));
+        given(verification.getRoundRecord()).willReturn(roundRecord);
+        given(roundRecord.getRound()).willReturn(round);
+        given(round.getChallenge()).willReturn(challenge);
+        given(challenge.getId()).willReturn(challengeId);
+
+        // [핵심] 유저 챌린지 정보가 없음 (미참여)
+        given(userChallengeRepository.findByUserIdAndChallengeId(userId, challengeId))
+                .willReturn(Optional.empty());
+
+        CommentCreateRequestDto request = new CommentCreateRequestDto();
+
+        // when & then
+        assertThatThrownBy(() -> commentService.createComment(verificationId, userId, request))
+                .isInstanceOf(GlobalException.class)
+                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.USER_CHALLENGE_NOT_FOUND);
+    }
+
+    @Test
+    @DisplayName("댓글 작성 실패: 참여는 했으나 상태가 JOINED가 아님 (DROP/QUIT 등)")
+    void createComment_UserChallengeNotJoined() {
+        // given
+        Long verificationId = 100L;
+        Long userId = 1L;
+        Long challengeId = 10L;
+
+        Verification verification = mock(Verification.class);
+        RoundRecord roundRecord = mock(RoundRecord.class);
+        Round round = mock(Round.class);
+        Challenge challenge = mock(Challenge.class);
+        User user = createUser(userId, "중도포기자", UserStatus.ACTIVE);
+
+        given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
+        given(userRepository.findById(userId)).willReturn(Optional.of(user));
+        given(verification.getRoundRecord()).willReturn(roundRecord);
+        given(roundRecord.getRound()).willReturn(round);
+        given(round.getChallenge()).willReturn(challenge);
+        given(challenge.getId()).willReturn(challengeId);
+
+        // [핵심] 참여 상태가 DROP (중도 포기)
+        UserChallenge userChallenge = mock(UserChallenge.class);
+        given(userChallengeRepository.findByUserIdAndChallengeId(userId, challengeId))
+                .willReturn(Optional.of(userChallenge));
+        given(userChallenge.getStatus()).willReturn(ChallengeJoinStatus.DROPPED);
+
+        CommentCreateRequestDto request = new CommentCreateRequestDto();
+
+        // when & then
+        assertThatThrownBy(() -> commentService.createComment(verificationId, userId, request))
+                .isInstanceOf(GlobalException.class)
+                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.USER_CHALLENGE_NOT_FOUND);
+    }
+
+    @Test
+    @DisplayName("댓글 작성 실패: 현재 진행 중인 라운드가 아닌 인증글 (ROUND_NOT_CURRENT)")
+    void createComment_RoundNotCurrent() {
+        // given
+        Long verificationId = 100L;
+        Long userId = 1L;
+        Long challengeId = 10L;
+        Long currentRoundId = 50L;
+        Long pastRoundId = 49L;
+
+        Verification verification = mock(Verification.class);
+        RoundRecord roundRecord = mock(RoundRecord.class);
+        Round round = mock(Round.class);
+        Challenge challenge = mock(Challenge.class);
+        Round currentRound = mock(Round.class); // 현재 진행중인 라운드 객체
+        User user = createUser(userId, "참여자", UserStatus.ACTIVE);
+
+        given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
+        given(userRepository.findById(userId)).willReturn(Optional.of(user));
+
+        // 체이닝 & 상태 설정
+        given(verification.getRoundRecord()).willReturn(roundRecord);
+        given(roundRecord.getRound()).willReturn(round);
+        given(round.getChallenge()).willReturn(challenge);
+        given(challenge.getId()).willReturn(challengeId);
+
+        // 유저는 정상 참여 상태
+        UserChallenge userChallenge = mock(UserChallenge.class);
+        given(userChallengeRepository.findByUserIdAndChallengeId(userId, challengeId))
+                .willReturn(Optional.of(userChallenge));
+        given(userChallenge.getStatus()).willReturn(ChallengeJoinStatus.JOINED);
+
+        // 챌린지의 현재 라운드 vs 인증글의 라운드 불일치
+        given(challenge.getCurrentRound()).willReturn(currentRound);
+        given(currentRound.getId()).willReturn(currentRoundId);
+        given(verification.getRoundId()).willReturn(pastRoundId); // 과거 라운드
+
+        CommentCreateRequestDto request = new CommentCreateRequestDto();
+
+        // when & then
+        assertThatThrownBy(() -> commentService.createComment(verificationId, userId, request))
+                .isInstanceOf(GlobalException.class)
+                // ErrorCode가 업데이트 되었는지 확인 (ROUND4006)
+                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.ROUND_NOT_CURRENT);
+    }
+// 기존 CommentServiceTest 클래스에 추가할 테스트 메서드들
+
+    @Test
+    @DisplayName("익명 댓글 조회 시 프로필과 작성 시간 포함 확인")
+    void getComments_AnonymousWithProfileAndTime() {
+        // given
+        Long verificationId = 100L;
+        Long myId = 1L;
+        Long otherId = 2L;
+
+        User me = createUser(myId, "나", UserStatus.ACTIVE);
+        User other = createUser(otherId, "타인", UserStatus.ACTIVE);
+        Verification verification = createVerification(verificationId);
+
+        // 익명 댓글 생성
+        Comment comment = createComment(14L, verification, other, "익명 댓글입니다", false, true, 1);
+
+        given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
+        given(userRepository.findById(myId)).willReturn(Optional.of(me));
+        given(userBlockRepository.findBlockedIdsByBlockerId(myId)).willReturn(Collections.emptyList());
+
+        given(commentRepository.findByVerificationAndDepthOrderByCreatedAtAsc(any(), anyInt(), any(Pageable.class)))
+                .willReturn(new PageImpl<>(List.of(comment)));
+        given(commentRepository.findByParentInOrderByCreatedAtAsc(anyList()))
+                .willReturn(Collections.emptyList());
+        given(commentRepository.countByVerificationAndIsDeletedFalse(verification)).willReturn(1L);
+
+        // when
+        CommentListResponseDto result = commentService.getComments(verificationId, myId, PageRequest.of(0, 10));
+
+        // then
+        CommentResponseDto dto = result.getComments().get(0);
+        assertThat(dto.getUserName()).isEqualTo("익명1");
+        assertThat(dto.getUserProfileUrl()).isNull(); // 익명은 마스킹된 프로필 (null 또는 기본 이미지)
+        assertThat(dto.getCreatedAt()).isNotNull(); // 작성 시간 포함 확인
+        assertThat(dto.isAnonymous()).isTrue();
+    }
+
+    @Test
+    @DisplayName("익명 댓글 조회: 프로필은 가려지고(null), 작성 시간은 노출되어야 한다.")
+    void getComments_Anonymous_ProfileMasked_TimeVisible() {
+        // given
+        Long verificationId = 100L;
+        Long myId = 1L;
+        Long otherId = 2L;
+
+        User me = createUser(myId, "나", UserStatus.ACTIVE);
+        User other = createUser(otherId, "타인", UserStatus.ACTIVE);
+        Verification verification = createVerification(verificationId);
+
+        // 익명 댓글 생성 (익명 번호 1)
+        Comment comment = createComment(14L, verification, other, "익명 댓글입니다", false, true, 1);
+
+        // Mocking
+        given(verificationRepository.findById(verificationId)).willReturn(Optional.of(verification));
+        given(userRepository.findById(myId)).willReturn(Optional.of(me));
+
+        // 차단 목록 없음 (마스킹 로직 간소화)
+        given(userBlockRepository.findBlockedIdsByBlockerId(myId)).willReturn(Collections.emptyList());
+
+        // 댓글 조회 결과 반환
+        given(commentRepository.findByVerificationAndDepthOrderByCreatedAtAsc(any(), anyInt(), any(Pageable.class)))
+                .willReturn(new PageImpl<>(List.of(comment)));
+        given(commentRepository.findByParentInOrderByCreatedAtAsc(anyList()))
+                .willReturn(Collections.emptyList());
+        // 전체 카운트 조회
+        given(commentRepository.countByVerificationAndIsDeletedFalse(verification)).willReturn(1L);
+
+        // when
+        CommentListResponseDto result = commentService.getComments(verificationId, myId, PageRequest.of(0, 10));
+        CommentResponseDto dto = result.getComments().get(0);
+
+        // then
+        // 1. 익명 여부 확인
+        assertThat(dto.isAnonymous()).isTrue();
+
+        // 2. [핵심] 프로필 이미지는 마스킹 되어야 함 (null)
+        assertThat(dto.getUserProfileUrl())
+                .as("익명 댓글의 프로필 이미지는 null이어야 합니다.")
+                .isNull();
+
+        // 3. [핵심] 작성 시간은 노출되어야 함
+        assertThat(dto.getCreatedAt())
+                .as("익명 댓글이어도 작성 시간은 보여야 합니다.")
+                .isNotNull()
+                .isEqualTo(comment.getCreatedAt());
+
+        // 4. 닉네임 형식 확인
+        assertThat(dto.getUserName()).isEqualTo("익명1");
+    }
+
+    /**
+     * [테스트 2] 채택된 댓글 삭제 시도 검증
+     * - isAdopted = true 인 댓글을 삭제하려고 하면
+     * - GlobalException(COMMENT_ADOPTED_CANNOT_DELETE) 예외가 발생해야 함
+     * - 실제 delete 메서드는 호출되지 않아야 함
+     */
+    @Test
+    @DisplayName("댓글 삭제 실패: 채택된 댓글은 절대 삭제할 수 없다.")
+    void deleteComment_Fail_IfAdopted() {
+        // given
+        Long commentId = 50L;
+        Long userId = 1L;
+
+        User user = createUser(userId, "작성자", UserStatus.ACTIVE);
+        Verification verification = createVerification(100L);
+
+        // 채택된(isAdopted = true) 댓글 생성
+        Comment adoptedComment = Comment.builder()
+                .id(commentId)
+                .verification(verification)
+                .user(user)
+                .content("채택된 답변")
+                .isDeleted(false)
+                .isAnonymous(false)
+                .likesCount(0)
+                .depth(0)
+                .isAdopted(true) // [중요] 채택 상태
+                .build();
+
+        // Mocking: 댓글 조회 시 채택된 댓글 반환
+        given(commentRepository.findByIdAndIsDeletedFalse(commentId))
+                .willReturn(Optional.of(adoptedComment));
+
+        // when & then
+        assertThatThrownBy(() -> commentService.deleteComment(commentId, userId))
+                .isInstanceOf(GlobalException.class)
+                .hasFieldOrPropertyWithValue("errorCode", ErrorCode.COMMENT_ADOPTED_CANNOT_DELETE);
+
+        // Verify: 실제 삭제(delete) 로직은 호출되지 않았는지 검증
+        verify(commentRepository, never()).delete(any(Comment.class));
+    }
+
+    /**
+     * [테스트 3] 일반 댓글 삭제 성공 검증 (대조군)
+     * - 채택되지 않은 댓글은 정상적으로 삭제 메서드가 호출되어야 함
+     */
+    @Test
+    @DisplayName("댓글 삭제 성공: 채택되지 않은 댓글은 정상 삭제된다.")
+    void deleteComment_Success_IfNotAdopted() {
+        // given
+        Long commentId = 51L;
+        Long userId = 1L;
+
+        User user = createUser(userId, "작성자", UserStatus.ACTIVE);
+        Verification verification = createVerification(100L);
+
+        // 일반 댓글 생성 (isAdopted = false)
+        Comment normalComment = Comment.builder()
+                .id(commentId)
+                .verification(verification)
+                .user(user)
+                .content("일반 댓글")
+                .isDeleted(false)
+                .isAdopted(false) // [중요] 미채택 상태
+                .build();
+
+        given(commentRepository.findByIdAndIsDeletedFalse(commentId))
+                .willReturn(Optional.of(normalComment));
+
+        // when
+        commentService.deleteComment(commentId, userId);
+
+        // then
+        // delete() 메서드가 정확히 1번 호출되었는지 검증
+        verify(commentRepository, times(1)).delete(normalComment);
     }
 }
